fixed grid gap on css files

--- a/src/components/kidsmovies.css
+++ b/src/components/kidsmovies.css
@@ -40,7 +40,7 @@
 .kids-categories-grid {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-gap: 16px;
+    grid-gap: 0%;
     align-items: center;
     justify-content: center;
     
