--- a/src/components/upcomingmovies.css
+++ b/src/components/upcomingmovies.css
@@ -51,7 +51,7 @@
 .pages-grid {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-gap: 16px;
+    grid-gap: 0%;
     align-items: center;
     justify-content: center;
     
